--- a/pubs-play.html
+++ b/pubs-play.html
@@ -5,9 +5,18 @@
 <body>
   <h1>Want to learn about pub-sub?</h1>
 
+  <h2>Odds</h2>
   <ul>
-  {{#each numbers}}
+  {{#each oddNumbers}}
   <li>{{number}}</li>
   {{/each}}
   </ul>
+
+  <h2>Evens</h2>
+  <ul>
+  {{#each evenNumbers}}
+  <li>{{number}}</li>
+  {{/each}}
+  </ul>
+
 </body>
